---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-23

  Other:
    - Fixed path to icons
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-23

  Other:
    - Ported mod to Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021-02-23

  Other:
    - Marked as compatible with Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-08-27

  Changes:
    - Autosave timestamps are now 0-padded out to 5 digits for hours, 2 for minutes (e.g. SavePrefix-00012h00m), ensuring they sort lexicographically in chronological order
    - The missing-prefix reminder now uses a GUI dialog instead of a simple text message

  Features:
    - The ability to manually trigger a timestamped save with a custom suffix, via a shortcut bar button or keybind

  Other:
    - Gave the mod a thumbnail/icon
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2020-07-24

  Changes:
    - Made the autosave interval configurable (per map, in minutes, defaulting to 60)
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2020-07-21

  Other:
    - Fixed packaging process to include a copy of the license in the final zip
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2020-07-19

  Features:
    - Automatically saves after every hour of gameplay to a timestamped save, with a configurable prefix